--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<nav class="collapse navbar-collapse">
 			<!-- Main navigation -->
 			<ul id="headernavigation" class="nav navbar-nav">
+				<li><button type=submit style="background: #ccc url(images/team/eng.png);  padding: 0.5em 1em">ENG</button><button type="button">AR</button></li>
 				<li class="active"><a href="#page-top">Home</a></li>	
 				<li><a href="#about">About</a></li>	
 				<li><a href="#subscribe">Subscribe</a></li>	
@@ -80,6 +81,7 @@
      
           Sorry, your browser does not support HTML5 video.
 </video> 
+ 
 		<div class="pattern height-resize">
 			<div class="container">
 		 
