--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 	<script src="assets/js/html5shiv.js"></script>
 	<![endif]-->
 	
-	<script type="text/javascript" src="js/jquery-1.10.0.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.10.0.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.8.22.custom.min.js"></script>
   <script type="text/javascript" src="js/jquery.imagesloaded.js"></script>
   <script type="text/javascript" src="js/video.js"></script>
   <script type="text/javascript" src="js/bigvideo.js"></script>
-	
+  <script type="text/javascript" src="js/langage.js"></script>
+
 </head>
 <body>
 
@@ -87,7 +88,9 @@
 		 
 
 				<h1 class="site-title">
-					Zakaria
+					<script type="text/javascript">
+						document.write(langage.home);
+					</script>
 				</h1><!-- /.site-title -->
 				
 
