--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
 			</button> <!-- /.navbar-toggle -->
 				
 		</div> <!-- /.navbar-header -->
-
+				<a href="http://localhost/4-color-bg/">en</a>
+				<a href="http://localhost/4-color-bg/?lang=ar">ar</a>
 		<nav class="collapse navbar-collapse">
 			<!-- Main navigation -->
 			<ul id="headernavigation" class="nav navbar-nav">
-				<li><button type=submit style="background: #ccc url(images/team/eng.png);  padding: 0.5em 1em">ENG</button><button type="button">AR</button></li>
+				
 				<li class="active"><a href="#page-top">Home</a></li>	
 				<li><a href="#about">About</a></li>	
 				<li><a href="#subscribe">Subscribe</a></li>	
