Css for langage box

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
 			</button> <!-- /.navbar-toggle -->
 				
 		</div> <!-- /.navbar-header -->
-				<a href="http://localhost/4-color-bg/">en</a>
-				<a href="http://localhost/4-color-bg/?lang=ar">ar</a>
+		<div class="langage">
+          <a href="http://localhost/4-color-bg/">en</a> | 
+		  <a href="http://localhost/4-color-bg/?lang=ar">ar</a>
+        </div>		
+       
 		<nav class="collapse navbar-collapse">
 			<!-- Main navigation -->
 			<ul id="headernavigation" class="nav navbar-nav">
